objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACCTNGSSID__c</fullName>
        <label>ACCTNGSSID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADP_FI__c</fullName>
        <label>ADP - FI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AG_Activation_Date__c</fullName>
        <inlineHelpText>updated by the process builder when the asset active date is updated</inlineHelpText>
        <label>AG Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AG_Termination_Date__c</fullName>
        <inlineHelpText>vAuto field</inlineHelpText>
        <label>AG Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIS_Rebates_Verified__c</fullName>
        <label>AIS Rebates Verified</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ALERT__c</fullName>
        <label>****ALERT****</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_AC_Email__c</fullName>
        <inlineHelpText>The email address of the AutoTrader salesperson that helped to sell this account.</inlineHelpText>
        <label>ATC AC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ATC_AC_Name__c</fullName>
        <inlineHelpText>The name of the AutoTrader salesperson that helped to sell this account.</inlineHelpText>
        <label>ATC AC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_AC_Phone__c</fullName>
        <inlineHelpText>The phone number of the AutoTrader salesperson that helped to sell this account.</inlineHelpText>
        <label>ATC AC Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ATC_ATG_Package__c</fullName>
        <description>Used by ATC Lead Generation email service.</description>
        <inlineHelpText>Used by ATC Lead Generation email service.</inlineHelpText>
        <label>ATC / ATG Package</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Account_ID__c</fullName>
        <inlineHelpText>for Leads submitted into the AutoTrader Lead Campaign</inlineHelpText>
        <label>ATC Account ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Contract_ID__c</fullName>
        <inlineHelpText>For accounts where ATC controls billing, only for S14 websites.</inlineHelpText>
        <label>ATC Website Contract ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Dealer_Profile__c</fullName>
        <description>Custom Link to ATC Fastlane website</description>
        <formula>HYPERLINK(&quot;https://fastlane.autotrader.com/freedom/dealer-profile/report.seam?dealerIdparam=&quot;&amp; SVOC_Id__c &amp;&quot;&amp;activeNav=DEALER_PROFILE&amp;cid=2130&quot;,&quot;Open Dealer Profile in Fastlane&quot;)</formula>
        <inlineHelpText>Open this Account in ATC Fastlane.</inlineHelpText>
        <label>ATC Dealer Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Flair__c</fullName>
        <description>Formula used to display flair image for BU as Active, Former, or Prospect.</description>
        <formula>CASE(  AutoTrader_Status__c  , 
&quot;Customer&quot;, IMAGE(&quot;/resource/Flair_Logos/AutoTrader_Active.png&quot;, &quot;ATC Active&quot;), 
&quot;Churned&quot;, IMAGE(&quot;/resource/Flair_Logos/AutoTrader_Former.png&quot;, &quot;ATC Former&quot;), 
&quot;Prospect&quot;,IMAGE(&quot;/resource/Flair_Logos/AutoTrader_Prospect.png&quot;, &quot;ATC Prospect&quot;), 
&quot;/s.gif&quot; 
)</formula>
        <inlineHelpText>Formula used to display flair image for BU as Active, Former, or Prospect.</inlineHelpText>
        <label>ATC Flair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_HaystakSE_Contract_ID__c</fullName>
        <inlineHelpText>For accounts where ATC controls billing, only for S14-sold Haystak Search Essentials.</inlineHelpText>
        <label>ATC HaystakSE Contract ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Secondary_Contact_Phone__c</fullName>
        <inlineHelpText>for Leads submitted into the AutoTrader Lead Campaign</inlineHelpText>
        <label>ATC Secondary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ATC_Secondary_Contact__c</fullName>
        <inlineHelpText>for Leads submitted into the AutoTrader Lead Campaign</inlineHelpText>
        <label>ATC Secondary Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Secondary_Dealer_ID__c</fullName>
        <label>ATC Secondary Dealer ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Spend__c</fullName>
        <label>ATC Spend -DELETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ATC_Status__c</fullName>
        <description>Field is updated by the system based on the product status in the ATG Product library.</description>
        <inlineHelpText>Field is updated by the system based on the product status in the ATG Product library.</inlineHelpText>
        <label>ATC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVUS__c</fullName>
        <label>AVUS NO.</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <description>per Dan Reteneller 9/17/2014 update field from Account Legal Name to Account Invoice Name</description>
        <inlineHelpText>Governed and updated by SVOC.</inlineHelpText>
        <label>Account Invoice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>VinPro2__r.User_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vin PM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Id__c</fullName>
        <formula>OwnerId</formula>
        <inlineHelpText>this field is used for data loading only</inlineHelpText>
        <label>Account Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Value__c</fullName>
        <formula>IF(
   CONTAINS(TEXT(Special_Account_Status__c), &quot;Heat&quot;),
   IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000000xzUL&amp;oid=00D700000008zHZ&amp;lastMod=1320445914000&quot;,&quot;Heat&quot;),
   IMAGE(&quot;/s.gif&quot;,&quot;&quot;)
) &amp; &quot; &quot; &amp;
IF(
   ISPICKVAL(Executive_Spotlight__c,&quot;Yes&quot;),
   IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001Uqn9&amp;oid=00D700000008zHZ&amp;lastMod=1362435996000&quot;,&quot;Spotlight&quot;),
   IMAGE(&quot;/s.gif&quot;,&quot;&quot;)
) &amp; &quot; &quot; &amp;
IF(
   ISPICKVAL(Premium_Account__c, &quot;Premier&quot;),
   IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001UqoR&amp;oid=00D700000008zHZ&amp;lastMod=1362441344000&quot;,&quot;Premiere&quot;),
   IMAGE(&quot;/s.gif&quot;,&quot;&quot;)
) &amp; &quot; &quot; &amp;
IF(
   CONTAINS(TEXT(Special_Account_Status__c), &quot;Revenue&quot;),
   IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001U9ts&amp;oid=00D700000008zHZ&amp;lastMod=1322759290000&quot;,&quot;Revenue&quot;),
   IMAGE(&quot;/s.gif&quot;,&quot;&quot;)
) &amp; &quot; &quot; &amp;
IF(
   CONTAINS(TEXT(Premium_Account__c), &quot;National&quot;),
   IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001Uw1k&amp;oid=00D700000008zHZ&amp;lastMod=1364937577000&quot;,&quot;National&quot;),
   IMAGE(&quot;/s.gif&quot;,&quot;&quot;)
)</formula>
        <label>Account Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Team_Action__c</fullName>
        <formula>HYPERLINK(&quot;/apex/UpdateAccountTeam?id=&quot; + Id, &quot;Sync&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Team Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Users2__c</fullName>
        <formula>vAuto_POA__r.Active_Users__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Active Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Users__c</fullName>
        <description>The number of users that are enabled in the vAuto web application</description>
        <label># Active Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Settings_Verification__c</fullName>
        <label>Admin Settings Verification</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adwords_CID_2__c</fullName>
        <description>Haystak</description>
        <label>Adwords CID 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adwords_CID_3__c</fullName>
        <label>Adwords CID 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adwords_CID_4__c</fullName>
        <description>Haystak</description>
        <label>Adwords CID 4</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adwords_CID__c</fullName>
        <description>Haystak</description>
        <label>Adwords CID 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adwords_Conversion_Id__c</fullName>
        <description>Haystak</description>
        <label>Adwords Conversion Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <description>used by Haystak</description>
        <inlineHelpText>used by Haystak</inlineHelpText>
        <label>Customer Alias</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoTrader_Spend__c</fullName>
        <description>From BU Spend object</description>
        <label>AutoTrader Spend</label>
        <summarizedField>BU_Spend__c.Spend__c</summarizedField>
        <summaryFilterItems>
            <field>BU_Spend__c.Business_Unit__c</field>
            <operation>equals</operation>
            <value>ATC</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>BU_Spend__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active, Delivered, Pending Cancellation, Pending Cancellation with Restriction</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>BU_Spend__c.Spend__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>BU_Spend__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AutoTrader_Status__c</fullName>
        <description>For BU Spend object</description>
        <label>AutoTrader Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AutoTrader_Total_Product_Count__c</fullName>
        <description>Calculates the number of active AutoTrader products from the BU Spend object.</description>
        <label>AutoTrader Total Product Count</label>
        <summarizedField>BU_Spend__c.Product_Status_Value__c</summarizedField>
        <summaryFilterItems>
            <field>BU_Spend__c.Business_Unit__c</field>
            <operation>equals</operation>
            <value>ATC</value>
        </summaryFilterItems>
        <summaryForeignKey>BU_Spend__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Spend__c</fullName>
        <inlineHelpText>related to the Advertising House field</inlineHelpText>
        <label>Average Monthly Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BAC_Dealer_Code_Received_Setup__c</fullName>
        <label>BAC &amp; Dealer Code Received &amp; Setup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BU_Account_s__c</fullName>
        <formula>&quot;HAY: &quot; &amp; Haystak_Account_Number__c &amp; 
BR() &amp;

&quot;VAT: &quot; &amp;  LogicalId__c &amp;
BR() &amp;

&quot;VIN: &quot; &amp; AccountNumber</formula>
        <label>BU Account #&apos;s</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Statuses__c</fullName>
        <formula>&quot;VAT: &quot; &amp; TEXT(vAuto_Provision_type__c)  &amp;
BR() &amp;
&quot;VIN: &quot; &amp; TEXT(Status__c)&amp; BR() &amp;
&quot;HAY: &quot; &amp; TEXT(Haystak_Account_Status__c)</formula>
        <inlineHelpText>formula field that reads the BU account numbers and statuses and puts into one field for searching</inlineHelpText>
        <label>BU Statuses</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Recurring_Revenue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>This is updated nightly by a scheduled job.</inlineHelpText>
        <label>Vin Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Attention_To__c</fullName>
        <inlineHelpText>Updated by SVOC.</inlineHelpText>
        <label>Billing Attention To:</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <inlineHelpText>This field is NO LONGER updated monthly by the MotoSnap Billing Breakdown report. Working on Salesforce functionality to replicate.</inlineHelpText>
        <label>Vin Billing Type</label>
        <picklist>
            <picklistValues>
                <fullName>CRM w/Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILM w/Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory w/Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Extension__c</fullName>
        <description>Postal code extension for Billing Address.</description>
        <inlineHelpText>Postal code extension for Billing Address.</inlineHelpText>
        <label>Billing Zip Extension</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_First_5__c</fullName>
        <description>First 5 numbers of the billing zip code.</description>
        <formula>LEFT( BillingPostalCode , 5)</formula>
        <label>Zip Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bing_Id_1__c</fullName>
        <description>Haystak</description>
        <label>Bing Id 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bing_Id_2__c</fullName>
        <description>Haystak</description>
        <label>Bing Id 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bing_Id_3__c</fullName>
        <description>Haystak</description>
        <label>Bing Id 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Contract_End__c</fullName>
        <description>CRM Contract End Date</description>
        <inlineHelpText>Input as Month and Year, i.e. March 2008</inlineHelpText>
        <label>CRM Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Limited_Users_Notes__c</fullName>
        <label>Limited Users Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Limited_Users__c</fullName>
        <label>Limited Users</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <inlineHelpText>Only Valid for Prospecting Accounts.</inlineHelpText>
        <label>CRM (Prospecting ONLY)</label>
        <picklist>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona/Dealertrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoAccelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoRaptor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buzz Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Doone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFM/Auto Accelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Dealer Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contact Manager - Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer/Mate (Div of Auto/Mate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Mine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Peak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Socket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Ups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive Velocity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Biz</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Provider_Call_Tracking_Setup__c</fullName>
        <label>Call Provider/Call Tracking Setup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Carfax_Autocheck_Setup_Notes__c</fullName>
        <label>Carfax Autocheck Setup Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cities_in_Geo__c</fullName>
        <description>Haystak field</description>
        <label>SEM Cities in Geo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Approval_Needed__c</fullName>
        <description>Haystak Client Approval Required</description>
        <inlineHelpText>Haystak Field: Is Client Approval Required for this dealer?</inlineHelpText>
        <label>Client Approval Needed</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_UA_Code__c</fullName>
        <label>Client UA Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>haystak field</description>
        <label>SEM Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Portal_Login__c</fullName>
        <label>Compliance Portal Login</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Portal_Password__c</fullName>
        <label>Compliance Portal Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Portal_Website__c</fullName>
        <label>Compliance Portal Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Conquest_Activation_Date__c</fullName>
        <inlineHelpText>Updated by the workflow when the asset&apos;s Active Date is updated by the training team.  Can only be edited from the account by certain users</inlineHelpText>
        <label>Conquest Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conquest_MRR__c</fullName>
        <inlineHelpText>references the BU Spend object and sums the recurring revenue for all active product related to Conquest Product Suite</inlineHelpText>
        <label>Conquest MRR</label>
        <summarizedField>BU_Spend__c.Spend__c</summarizedField>
        <summaryFilterItems>
            <field>BU_Spend__c.Product_Group__c</field>
            <operation>equals</operation>
            <value>Conquest, Conquest Stand-Alone</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>BU_Spend__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active, Delivered, Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>BU_Spend__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Conquest_Price_Changes2__c</fullName>
        <formula>vAuto_POA__r.Conquest_Price_Changes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Conquest Price Changes2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conquest_Region__c</fullName>
        <label>Conquest Region</label>
        <picklist>
            <controllingField>Conquest_Territory__c</controllingField>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conquest_Status__c</fullName>
        <inlineHelpText>this field is no longer used</inlineHelpText>
        <label>Obsolete_Conquest Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conquest_Termination_Date__c</fullName>
        <inlineHelpText>vauto Field</inlineHelpText>
        <label>Conquest Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conquest_Territory_Owner__c</fullName>
        <label>Conquest Territory Owner</label>
        <picklist>
            <controllingField>Conquest_Region__c</controllingField>
            <picklistValues>
                <fullName>Andrew Harper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashley Koreman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burke Noonan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clay Doyle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Perez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Mosley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt Bohach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randy Wroble</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shannon Beseth</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conquest_Territory__c</fullName>
        <label>Conquest Territory</label>
        <picklist>
            <controllingField>Provision_Territory__c</controllingField>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appalachia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Califonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conquest_price_changes__c</fullName>
        <description># Conquest price changes for dealers with Conquest</description>
        <inlineHelpText># Conquest price changes for dealers with Conquest</inlineHelpText>
        <label># Conquest Price Changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Type__c</fullName>
        <description>Workflow sets this field from a Closed/Won VinSolutions Opportunity when either the Lead Source or Secondary Lead Source = DT/DDC Conversion or DT/DDC Conversion - New Customer.</description>
        <inlineHelpText>Workflow sets this field from a Closed/Won VinSolutions Opportunity when either the Lead Source or Secondary Lead Source = DT/DDC Conversion or DT/DDC Conversion - New Customer.</inlineHelpText>
        <label>Conversion Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DT/DDC Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT/DDC Conversion - New Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>used for reporting- allows the counting of accounts not record associated with an account</inlineHelpText>
        <label>Rooftop #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoxAuto_Company_Status__c</fullName>
        <description>Formula used to display BU flair at the top of the account page layout for each BU as Active, Former, or Prospect.</description>
        <formula>Haystak_Flair__c &amp; &quot;  &quot; &amp; vAuto_Flair__c &amp; &quot;  &quot; &amp; Vin_Flair__c</formula>
        <label>CoxAuto Company Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <defaultValue>$UserRole.Name</defaultValue>
        <label>Created By Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <inlineHelpText>the first date the customer paid a Closed Won Opportunity with VinSolutions</inlineHelpText>
        <label>VIN Customer Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Bureau_Setup_and_Verified_Notes__c</fullName>
        <label>Credit Bureau Setup and Verified Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Bureau_Setup_and_Verified__c</fullName>
        <label>Credit Bureau Setup and Verified</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_AC__c</fullName>
        <description>Current AC from SVOC</description>
        <label>Current AC</label>
        <length>150</length>
        <type>Text</type>
    </fields>
</CustomObject>